test/fail/error_mutrec.sest

module ErrorMutrec = struct

  type foo =
    {int, bar}

  andrec baz<$a> =
    | Baz(foo, bar)

  andrec bar =
    {bool, baz<foo>}

end
